adds application user, log path and JVM memory management